# cpputest_cmake_c

./: CMakeLists.txt  README.md
include/: cpputest_cmake_mult.h
src/: CMakeLists.txt  main.c  mult.c
tests/: CMakeLists.txt  test_mult.cc
